--- a/network/css/style.css
+++ b/network/css/style.css
@@ -221,9 +221,9 @@ margin-right:10px;
 
 #maintitle {
 width: 100%;
-height: 2px;
+height: 72px;
 background-repeat: no-repeat;
-margin-bottom:0px;
+margin-bottom:20px;
 }
 
 #maintitle h1 {
@@ -441,6 +441,11 @@ background-position: -171px -13px;
 background-position: -51px -13px;
 }
 
+#mainpanel .moreinformation {
+background: url('../images/info.png');
+background-repeat: no-repeat;
+margin-left: 5px;
+}
 
 #copyright {
 	margin:0 auto;	
